2011-06-02  Yuta Kitamura  <yutak@chromium.org>

Reviewed by Kent Tamura.

        WebSocket: Call WebSocketChannel::fail() when WebSocketHandshake has failed
        https://bugs.webkit.org/show_bug.cgi?id=61841

        * http/tests/websocket/tests/bad-handshake-crash-expected.txt:
        Now the error message starts with a capital letter.
2011-06-02  Yuta Kitamura  <yutak@chromium.org>

        Reviewed by Kent Tamura.

        WebSocket: Call WebSocketChannel::fail() when WebSocketHandshake has failed
        https://bugs.webkit.org/show_bug.cgi?id=61841

        There is no change in behavior except that capitalization of a few error messages
        has been changed. No new tests are added.

        * websockets/WebSocketChannel.cpp:
        (WebCore::WebSocketChannel::processBuffer):
        Pass m_handshake.failureReason() to fail() if the handshake has failed.
        * websockets/WebSocketHandshake.cpp:
        Replace occurrences of m_handle->addMessage() with assignments to m_failureReason.
        Change capitalization of a few messages so that all messages start with a capital letter.
        (WebCore::WebSocketHandshake::readServerHandshake):
        (WebCore::WebSocketHandshake::failureReason):
        (WebCore::WebSocketHandshake::readStatusLine):
        (WebCore::WebSocketHandshake::readHTTPHeaders):
        (WebCore::WebSocketHandshake::checkResponseHeaders):
        * websockets/WebSocketHandshake.h:
        Add failureReason(), which returns a string that describes why WebSocket handshake
        has failed.

Canonical link: https://commits.webkit.org/77359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87883 268f45cc-cd09-0410-ab3c-d52691b4dbfc